--- a/spring/src/main/resources/templates/cliente/lista.html
+++ b/spring/src/main/resources/templates/cliente/lista.html
@@ -3,36 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Sistema de Estoque</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div>
+<div class="container">
     <h1>Clientes</h1>
-    <hr/>
+    <hr>
     <div>
-        <a href="@{/clientes/novo}">Novo</a>
+        <a class="btn btn-info" th:href="@{/clientes/novo}">Novo</a>
     </div>
-    <hr/>
-    <table>
+    <hr>
+    <div th:if="${!#strings.isEmpty(feedback)}"
+         class="alert alert-success" role="alert">
+        <span th:text="${feedback}"></span>
+    </div>
+    <table class="table table-hover">
         <thead>
         <tr>
-            <td><strong>NOME</strong></td>
-            <td><strong>DATA NASCIMENTO</strong></td>
-            <td><strong>CPF</strong></td>
+            <td><b>NOME</b></td>
+            <td><b>DATA NASCIMENTO</b></td>
+            <td><b>CPF</b></td>
             <td></td>
             <td></td>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="cliente: ${clientes}">
+        <tr th:each="cliente : ${clientes}">
             <td th:text="${cliente.nome}"></td>
-            <td th:text="${cliente.dataDeNascimento}"></td>
+            <td th:text="${#temporals.format(cliente.dataDeNascimento, 'dd/MM/yyyy')}"></td>
             <td th:text="${cliente.cpf}"></td>
             <td>
-                <a th:href="@{/clientes/edita/{id}(id=${cliente.id})}">Editar</a>
+                <a class="btn btn-sm btn-warning" th:href="@{/clientes/edita/{id}(id=${cliente.id})}">Editar</a>
             </td>
             <td>
-                <a th:if="${cliente.ativo == false}" th:href="@{/clientes/ativa/{id}(id=${cliente.id})}">Ativar</a>
-                <a th:unless="${cliente.ativo == false}" th:href="@{/clientes/inativa/{id}(id=${cliente.id})}">Inativa</a>
+                <a class="btn btn-sm btn-success" th:if="${cliente.ativo == false}" th:href="@{/clientes/ativa/{id}(id=${cliente.id})}">Ativar</a>
+                <a class="btn btn-sm btn-danger" th:unless="${cliente.ativo == false}" th:href="@{/clientes/inativa/{id}(id=${cliente.id})}">Inativar</a>
             </td>
         </tr>
         </tbody>
