--- a/spring/src/main/resources/templates/index.html
+++ b/spring/src/main/resources/templates/index.html
@@ -12,47 +12,48 @@
     </style>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Sistema de Estoque</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/produtos">Produto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/clientes">Cliente</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/fornecedores">Fornecedor</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/nota-entrada">Nota de entrada</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/nota-saida">Nota de saída</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/estoque">Estoque</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/logout">Sair</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<div th:replace="fragmentos/menu :: menu"></div>
 <div class="container">
     <div class="bg-light p-5 rounded">
         <h1>Página inicial</h1>
         <p class="lead">Seja bem-vindo ao sistema de estoque</p>
     </div>
 </div>
+
+<!--<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">-->
+<!--    <div class="container-fluid">-->
+<!--        <a class="navbar-brand" href="/">Sistema de Estoque</a>-->
+<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+<!--        <div class="collapse navbar-collapse" id="navbarCollapse">-->
+<!--            <ul class="navbar-nav me-auto mb-2 mb-md-0">-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" aria-current="page" href="/produtos">Produto</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/clientes">Cliente</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/fornecedores">Fornecedor</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/nota-entrada">Nota de entrada</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/nota-saida">Nota de saída</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/estoque">Estoque</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" href="/logout">Sair</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
