--- a/spring/src/main/resources/templates/produto/formulario.html
+++ b/spring/src/main/resources/templates/produto/formulario.html
@@ -41,35 +41,22 @@
                     />
                 </div>
 
-                <div class="mb-6 col-12">
-                    <label class="form-label" for="nome">Nome</label>
-                    <input
-                            class="form-control"
-                            id="nome"
-                            type="text"
-                            th:field="*{nome}"
-                    />
-                    <span
-                            style="color: red"
-                            th:if="${#fields.hasErrors('nome')}"
-                            th:errors="*{nome}"
-                    ></span>
+                <div class="row">
+                    <div class="col-6 mb-3">
+                        <label class="form-label" for="nome">Nome</label>
+                        <input class="form-control" id="nome" type="text" th:field="*{nome}"/>
+                        <span style="color: red" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
+                    </div>
+                    <div class="col-4 mb-3">
+                        <label class="form-label" for="categoria">Categoria</label>
+                        <select class="form-select" id="categoria" th:field="*{categoria}">
+                            <option value="">Selecione uma categoria</option>
+                            <option th:each="categoria : ${categorias}" th:value="${categoria}" th:text="${categoria.getDescricao()}"></option>
+                        </select>
+                        <span style="color: red" th:if="${#fields.hasErrors('categoria')}" th:errors="*{categoria}"></span>
+                    </div>
                 </div>
-                <!--Razão Social-->
-                <div class="mb-6 col-12">
-                    <label class="form-label" for="categoria">Categoria</label>
-                    <input
-                            class="form-control"
-                            id="categoria"
-                            type="text"
-                            th:field="*{categoria}"
-                    />
-                    <span
-                            style="color: red"
-                            th:if="${#fields.hasErrors('categoria')}"
-                            th:errors="*{categoria}"
-                    ></span>
-                </div>
+
 
                 <div class="mb-3">
                     <input class="btn btn-success" type="submit" value="Salvar"/>
