Formulario de cadastro de itens

--- a/spring/src/main/resources/templates/nota-entrada/formulario.html
+++ b/spring/src/main/resources/templates/nota-entrada/formulario.html
@@ -55,7 +55,7 @@
           <input class="btn btn-primary" type="submit" value="Salvar"/>
         </div>
       </form>
-      <a class="btn mt-4 btn-sm btn-success" th:ref="@{/nota-entrada/{id}/item(id=${notaEntrada.id})}">Adicione um produto</a>
+      <a class="btn btn-sm btn-success" th:ref="@{/nota-entrada/{id}/item(id=${notaEntrada.id})}">Adicione um produto</a>
     </div>
   </div>
 </div>
