--- a/spring/src/main/resources/templates/nota-entrada/lista.html
+++ b/spring/src/main/resources/templates/nota-entrada/lista.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Sistema de Estoque</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+    />
     <style>
         body {
             padding-top: 4.5rem;
@@ -12,17 +16,21 @@
     </style>
 </head>
 <body>
-
 <div th:replace="fragmentos/menu :: menu"></div>
+
 <div class="container">
     <div class="bg-light p-5 rounded">
-        <h1>Nota de entrada</h1>
-        <hr>
+        <h1>Notas de entrada</h1>
+        <hr />
         <div>
             <a class="btn btn-primary" th:href="@{/nota-entrada/novo}">Novo</a>
         </div>
-        <hr>
-        <div th:if="${!#strings.isEmpty(feedback)}" class="alert alert-success" role="alert">
+        <hr />
+        <div
+                th:if="${!#strings.isEmpty(feedback)}"
+                class="alert alert-success"
+                role="alert"
+        >
             <span th:text="${feedback}"></span>
         </div>
         <table class="table table-hover">
@@ -38,16 +46,25 @@
             <tbody>
             <tr th:each="nota : ${notas}">
                 <td th:text="${nota.fornecedor.nomeFantasia}"></td>
-                <td th:text="${#temporals.format(nota.dataHora, 'dd/MM/yyyy HH:mm')}"></td>
-                <td th:text="${#numbers.formatDecimal(nota.total, 0, 'POINT',2,'COMMA')}"></td>
+                <td
+                        th:text="${#temporals.format(nota.dataHora, 'dd/MM/yyyy HH:mm')}"
+                ></td>
+                <td
+                        th:text="${#numbers.formatDecimal(nota.total, 0, 'POINT', 2, 'COMMA')}"
+                ></td>
                 <td>
-                    <a class="btn btn-sm btn-warning"
-                       th:href="@{/nota-entrada/edita/{id}(id=${nota.id})}">Editar</a>
+                    <a
+                            class="btn btn-sm btn-secondary"
+                            th:href="@{/nota-entrada/edita/{id}(id=${nota.id})}"
+                    >Editar</a
+                    >
                 </td>
                 <td>
-                    <a class="btn btn-sm btn-danger"
-                          th:href="@{/nota-entrada/remove/{id}(id=${nota.id})}">Remover
-                    </a>
+                    <a
+                            class="btn btn-sm btn-secondary"
+                            th:href="@{/nota-entrada/remove/{id}(id=${nota.id})}"
+                    >Remover</a
+                    >
                 </td>
             </tr>
             </tbody>
